ARX - úpravy v rámci pojmenovávání + "úklidu" kódu

--- a/arx.monks.cloud/src/html/case-study/index.njk
+++ b/arx.monks.cloud/src/html/case-study/index.njk
@@ -9,7 +9,7 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="box--yellow intro__box mdc-layout-grid__cell">
+      <div class="intro__box box--yellow mdc-layout-grid__cell">
         <p>Case Study</p>
       </div>
     </div>
@@ -18,7 +18,7 @@
 <div class="mdc-layout-grid layout-arx">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <div class="border-bg"></div>
+      <div class="square-icon"></div>
     </div>
   </div>
 </div>
