--- a/arx.monks.cloud/src/html/investments/index.njk
+++ b/arx.monks.cloud/src/html/investments/index.njk
@@ -9,7 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="white-box intro-box mdc-layout-grid__cell">
+        <div class="intro__box box--white mdc-layout-grid__cell">
           <p>Our investment track-record is summarized&nbsp;below.</p>
         </div>
       </div>
