--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -13,7 +13,7 @@
     {% block links %}{% endblock %}
 </head>
 
-<body>
+<body class="{{ bodyClass }}">
 <link rel="stylesheet" href="/assets/css/header.css">
 <header class="app-bar">
     <div class="mdc-layout-grid layout-arx">
