--- a/arx.monks.cloud/src/html/news/index.njk
+++ b/arx.monks.cloud/src/html/news/index.njk
@@ -9,7 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="intro__box white-box mdc-layout-grid__cell">
+        <div class="intro__box box--white mdc-layout-grid__cell">
           <p>News</p>
         </div>
       </div>
@@ -51,7 +51,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="button text-center">
-            <a class="button--info" href="/news/">LOAD MORE</a>
+            <a class="button__info" href="/news/">LOAD MORE</a>
           </div>
         </div>
       </div>
