--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -368,12 +368,10 @@
                 fill="#D3D3D3"/>
             </svg>
             <blockquote>
-              Tomáš v rámci auditu webu odhalil na našem eshopu řadu chyb, kterých jsem si jako majitel eshopu nevšiml.
-              Většinu změn jsme zapracovali a postupně se nám začaly dostávat výsledky. Objednávky nám narostly o 20%.
-              Děkujeme a doporučujeme!
+              Po první zkušenosti už děláme s TOP Monks další dva projekty na které nám náš tým nestačil. Navíc se od nich učíme i co sami neznáme. Jsou šikovní, komunikativní, zodpovědní a spolehliví. Odkud tahle firma spadla?
             </blockquote>
             <hr class="line-between_grey">
-            <figcaption><b>Radek Blaha</b><br>Top-style.cz</figcaption>
+            <figcaption><b>Martin Brandýský</b><br>Travelport CEE</figcaption>
           </div>
           <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -398,13 +396,10 @@
                 fill="#D3D3D3"/>
             </svg>
             <blockquote>
-              Po několika úpravách webu "předními odborníky" jsme se i s tímto požadavkem obrátili na TopMonks -
-              konkrétně jejich UX konzultační tým. Profesionální přístup Tomáše a nekompromisní pointy Veroniky vedly k
-              velmi rychlému redesignu webu, který nyní plní nastavené cíle, je přehledný a jednoduchý, a přivádí nám
-              leady takřka "až pod nos".
+              TopMonks jsem se ozval na základě doporučení, kterému jsem nedával moc velkou váhu. Dneska si říkám, že by byla obrovská škoda, pokud bych kontakt s TopMonks nenavázal. Kluci z TopMonks nám (MALL Pay) programovali a provozují doplněk pro Shoptet platformu. Komunikace byla od začátku profesionální a velmi rychlá. Nikde nic nevázlo a dodávka byla předána dle dohody v termínu, v budgetu i kvalitě. TopMonks již aktivně doporučuji, kde je potřeba.
             </blockquote>
             <hr class="line-between_grey">
-            <figcaption><b>Kamil Tomáš</b><br>Purposefly</figcaption>
+            <figcaption><b>Jan Bruder</b><br>MALL Pay</figcaption>
           </div>
           <div
             class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
