MallPay - still too long text

--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -396,7 +396,7 @@
                 fill="#D3D3D3"/>
             </svg>
             <blockquote>
-              TopMonks jsem se ozval na základě doporučení, kterému jsem nedával moc velkou váhu. Dneska si říkám, že by byla obrovská škoda, pokud bych kontakt s TopMonks nenavázal. Kluci z TopMonks nám programovali a provozují doplněk pro Shoptet platformu. Komunikace byla od začátku profesionální a velmi rychlá. Nikde nic nevázlo a dodávka byla předána dle dohody v termínu, v budgetu i kvalitě.
+              Kluci z TopMonks nám programovali a provozují doplněk pro Shoptet platformu. Komunikace byla od začátku profesionální a velmi rychlá. Nikde nic nevázlo a dodávka byla předána dle dohody v termínu, v budgetu i kvalitě.
             </blockquote>
             <hr class="line-between_grey">
             <figcaption><b>Jan Bruder</b><br>MALL Pay</figcaption>
