[arx.monks.cloud] Added client site rendering
Preparation for sorting and filtering (TBD vit Pája)

--- a/arx.monks.cloud/src/html/investments/index.njk
+++ b/arx.monks.cloud/src/html/investments/index.njk
@@ -22,62 +22,91 @@
       </div>
     </div>
   </div>
+  <script type="module">
+    import {html, render} from "https://unpkg.com/lit-html@1.3.0/lit-html.js?module";
+    import {repeat} from "https://unpkg.com/lit-html@1.3.0/directives/repeat.js?module";
+    import {unsafeHTML} from "https://unpkg.com/lit-html@1.3.0/directives/unsafe-html.js?module";
+
+    const investmentCard = (item) => html`
+      <article class="box box--stretch mdc-layout-grid__cell">
+        <div class="box__logo">
+          <img alt="" src="${item.image}" width="200">
+        </div>
+        <div class="box__inner box__inner--stretch">
+          <div class="box__text">
+            <h3 class="sub-title">${item.title}</h3>
+            ${unsafeHTML(item.body)}
+          </div>
+          <dl class="box__info">
+            <dt>Country</dt>
+            <dd>${item.country}</dd>
+            <dt>Transaction</dt>
+            <dd>${item.transaction}</dd>
+            <dt>Investment year</dt>
+            <dd>${item.year}</dd>
+          </dl>
+        </div>
+      </article>
+    `;
+
+    const {Current: currentInvestments, Realized: realizedInvestments} = {{ investments | groupby("status") | dump(2) | safe }};
+    const sortBy = (prop, arr) => arr.sort((a, b) => (a[prop] > b[prop]) ? 1 : -1);
+    const sortDescBy = (prop, arr) => arr.sort((a, b) => (a[prop] > b[prop]) ? -1 : 1);
+
+    render(
+      html`${repeat(sortDescBy("year", currentInvestments), investmentCard)}`,
+      document.getElementById("current-investments")
+    );
+    render(
+      html`${repeat(sortDescBy("year", realizedInvestments), investmentCard)}`,
+      document.getElementById("realized-investments")
+    );
+  </script>
+
+  {%- set byStatus = investments | groupby("status") -%}
+  {%- set current = byStatus["Current"] | sort(true, true, "year") -%}
+  {%- set realized = byStatus["Realized"] | sort(true, true, "year") -%}
+
   <section class="case-studies">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-
-        {%- set byStatus = investments | groupby("status") -%}
-        {%- set current = byStatus["Current"] | sort(true, true, "year") -%}
-        {%- set realized = byStatus["Realized"] | sort(true, true, "year") -%}
-
-          <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h3>Current Investments</h3>
-          </div>
-          {%- for item in current  -%}
-            <article class="box box--stretch mdc-layout-grid__cell">
-              <div class="box__logo">
-                <svg width="140" height="55" viewBox="0 0 187 55" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <title>[Logo] TES</title>
-                  <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M33.7444 12.6923V54.2949C33.7444 54.4819 33.6703 54.6612 33.5385 54.7935C33.4066 54.9257 33.2278 55 33.0414 55H21.7932C21.6068 55 21.428 54.9257 21.2961 54.7935C21.1643 54.6612 21.0902 54.4819 21.0902 54.2949V12.6923H0.703008C0.516558 12.6923 0.337746 12.618 0.205906 12.4858C0.0740667 12.3535 0 12.1742 0 11.9872V0.705128C0 0.518117 0.0740667 0.338764 0.205906 0.206527C0.337746 0.0742901 0.516558 0 0.703008 0L54.1316 0C54.318 0 54.4968 0.0742901 54.6287 0.206527C54.7605 0.338764 54.8346 0.518117 54.8346 0.705128V11.9872C54.8346 12.1742 54.7605 12.3535 54.6287 12.4858C54.4968 12.618 54.318 12.6923 54.1316 12.6923H33.7444ZM175.049 55H132.868C132.682 55 132.503 54.9257 132.371 54.7935C132.239 54.6612 132.165 54.4819 132.165 54.2949V43.0128C132.165 42.8258 132.239 42.6465 132.371 42.5142C132.503 42.382 132.682 42.3077 132.868 42.3077H174.346V33.8462H132.868C132.682 33.8462 132.503 33.7719 132.371 33.6396C132.239 33.5074 132.165 33.328 132.165 33.141V0.705128C132.165 0.518117 132.239 0.338764 132.371 0.206527C132.503 0.0742901 132.682 0 132.868 0L186.297 0C186.483 0 186.662 0.0742901 186.794 0.206527C186.926 0.338764 187 0.518117 187 0.705128V11.9872C187 12.1742 186.926 12.3535 186.794 12.4858C186.662 12.618 186.483 12.6923 186.297 12.6923H144.82V21.1538H186.297C186.483 21.1538 186.662 21.2281 186.794 21.3604C186.926 21.4926 187 21.672 187 21.859V54.2949C187 54.4819 186.926 54.6612 186.794 54.7935C186.662 54.9257 186.483 55 186.297 55H175.049ZM66.7857 0H120.214C120.401 0 120.58 0.0742901 120.711 0.206527C120.843 0.338764 120.917 0.518117 120.917 0.705128V11.9872C120.917 12.1742 120.843 12.3535 120.711 12.4858C120.58 12.618 120.401 12.6923 120.214 12.6923H66.7857C66.5993 12.6923 66.4205 12.618 66.2886 12.4858C66.1568 12.3535 66.0827 12.1742 66.0827 11.9872V0.705128C66.0827 0.518117 66.1568 0.338764 66.2886 0.206527C66.4205 0.0742901 66.5993 0 66.7857 0V0ZM66.7857 21.1538H120.214C120.401 21.1538 120.58 21.2281 120.711 21.3604C120.843 21.4926 120.917 21.672 120.917 21.859V33.141C120.917 33.328 120.843 33.5074 120.711 33.6396C120.58 33.7719 120.401 33.8462 120.214 33.8462H66.7857C66.5993 33.8462 66.4205 33.7719 66.2886 33.6396C66.1568 33.5074 66.0827 33.328 66.0827 33.141V21.859C66.0827 21.672 66.1568 21.4926 66.2886 21.3604C66.4205 21.2281 66.5993 21.1538 66.7857 21.1538ZM66.7857 42.3077H120.214C120.401 42.3077 120.58 42.382 120.711 42.5142C120.843 42.6465 120.917 42.8258 120.917 43.0128V54.2949C120.917 54.4819 120.843 54.6612 120.711 54.7935C120.58 54.9257 120.401 55 120.214 55H66.7857C66.5993 55 66.4205 54.9257 66.2886 54.7935C66.1568 54.6612 66.0827 54.4819 66.0827 54.2949V43.0128C66.0827 42.8258 66.1568 42.6465 66.2886 42.5142C66.4205 42.382 66.5993 42.3077 66.7857 42.3077Z"
-                        fill="#6D6E6E"/>
-                  <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M0.703008 21.1538H11.9511C12.1376 21.1538 12.3164 21.2281 12.4482 21.3603C12.5801 21.4926 12.6541 21.6719 12.6541 21.8589V54.2948C12.6541 54.4818 12.5801 54.6612 12.4482 54.7934C12.3164 54.9257 12.1376 55 11.9511 55H0.703008C0.516558 55 0.337746 54.9257 0.205906 54.7934C0.0740667 54.6612 0 54.4818 0 54.2948V21.8589C0 21.6719 0.0740667 21.4926 0.205906 21.3603C0.337746 21.2281 0.516558 21.1538 0.703008 21.1538ZM42.8835 21.1538H54.1316C54.318 21.1538 54.4968 21.2281 54.6287 21.3603C54.7605 21.4926 54.8346 21.6719 54.8346 21.8589V54.2948C54.8346 54.4818 54.7605 54.6612 54.6287 54.7934C54.4968 54.9257 54.318 55 54.1316 55H42.8835C42.697 55 42.5182 54.9257 42.3864 54.7934C42.2545 54.6612 42.1805 54.4818 42.1805 54.2948V21.8589C42.1805 21.6719 42.2545 21.4926 42.3864 21.3603C42.5182 21.2281 42.697 21.1538 42.8835 21.1538Z"
-                        fill="#A6CE39"/>
-                </svg>
+        <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h3>Current Investments</h3>
+        </div>
+      </div>
+      <div class="mdc-layout-grid__inner" id="current-investments">
+        {%- for item in current -%}
+          <article class="box box--stretch mdc-layout-grid__cell">
+            <div class="box__logo">
+              <img alt="" src="{{ item.image }}" width="200">
+            </div>
+            <div class="box__inner box__inner--stretch">
+              <div class="box__text">
+                <h3 class="sub-title">{{ item.title }}</h3>
+                {{ item.body | safe }}
               </div>
-              <div class="box__inner box__inner--stretch">
-                <div class="box__text">
-                  <h3 class="sub-title">{{ item.title }}</h3>
-                  {{ item.body | safe }}
-                </div>
-                <dl class="box__info">
-                  <dt>Country</dt>
-                  <dd>{{ item.country }}</dd>
-                  <dt>Transaction</dt>
-                  <dd>{{ item.transaction }}</dd>
-                  <dt>Investment year</dt>
-                  <dd>{{ item.year }}</dd>
-                </dl>
-              </div>
-            </article>
-          {%- endfor -%}
-
+              <dl class="box__info">
+                <dt>Country</dt>
+                <dd>{{ item.country }}</dd>
+                <dt>Transaction</dt>
+                <dd>{{ item.transaction }}</dd>
+                <dt>Investment year</dt>
+                <dd>{{ item.year }}</dd>
+              </dl>
+            </div>
+          </article>
+        {%- endfor -%}
+      </div>
+      <div class="mdc-layout-grid__inner">
         <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h3>Realized Investments</h3>
         </div>
+      </div>
+      <div class="mdc-layout-grid__inner" id="realized-investments">
         {%- for item in realized -%}
           <article class="box box--stretch mdc-layout-grid__cell">
             <div class="box__logo">
-              <svg width="140" height="55" viewBox="0 0 187 55" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <title>[Logo] TES</title>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M33.7444 12.6923V54.2949C33.7444 54.4819 33.6703 54.6612 33.5385 54.7935C33.4066 54.9257 33.2278 55 33.0414 55H21.7932C21.6068 55 21.428 54.9257 21.2961 54.7935C21.1643 54.6612 21.0902 54.4819 21.0902 54.2949V12.6923H0.703008C0.516558 12.6923 0.337746 12.618 0.205906 12.4858C0.0740667 12.3535 0 12.1742 0 11.9872V0.705128C0 0.518117 0.0740667 0.338764 0.205906 0.206527C0.337746 0.0742901 0.516558 0 0.703008 0L54.1316 0C54.318 0 54.4968 0.0742901 54.6287 0.206527C54.7605 0.338764 54.8346 0.518117 54.8346 0.705128V11.9872C54.8346 12.1742 54.7605 12.3535 54.6287 12.4858C54.4968 12.618 54.318 12.6923 54.1316 12.6923H33.7444ZM175.049 55H132.868C132.682 55 132.503 54.9257 132.371 54.7935C132.239 54.6612 132.165 54.4819 132.165 54.2949V43.0128C132.165 42.8258 132.239 42.6465 132.371 42.5142C132.503 42.382 132.682 42.3077 132.868 42.3077H174.346V33.8462H132.868C132.682 33.8462 132.503 33.7719 132.371 33.6396C132.239 33.5074 132.165 33.328 132.165 33.141V0.705128C132.165 0.518117 132.239 0.338764 132.371 0.206527C132.503 0.0742901 132.682 0 132.868 0L186.297 0C186.483 0 186.662 0.0742901 186.794 0.206527C186.926 0.338764 187 0.518117 187 0.705128V11.9872C187 12.1742 186.926 12.3535 186.794 12.4858C186.662 12.618 186.483 12.6923 186.297 12.6923H144.82V21.1538H186.297C186.483 21.1538 186.662 21.2281 186.794 21.3604C186.926 21.4926 187 21.672 187 21.859V54.2949C187 54.4819 186.926 54.6612 186.794 54.7935C186.662 54.9257 186.483 55 186.297 55H175.049ZM66.7857 0H120.214C120.401 0 120.58 0.0742901 120.711 0.206527C120.843 0.338764 120.917 0.518117 120.917 0.705128V11.9872C120.917 12.1742 120.843 12.3535 120.711 12.4858C120.58 12.618 120.401 12.6923 120.214 12.6923H66.7857C66.5993 12.6923 66.4205 12.618 66.2886 12.4858C66.1568 12.3535 66.0827 12.1742 66.0827 11.9872V0.705128C66.0827 0.518117 66.1568 0.338764 66.2886 0.206527C66.4205 0.0742901 66.5993 0 66.7857 0V0ZM66.7857 21.1538H120.214C120.401 21.1538 120.58 21.2281 120.711 21.3604C120.843 21.4926 120.917 21.672 120.917 21.859V33.141C120.917 33.328 120.843 33.5074 120.711 33.6396C120.58 33.7719 120.401 33.8462 120.214 33.8462H66.7857C66.5993 33.8462 66.4205 33.7719 66.2886 33.6396C66.1568 33.5074 66.0827 33.328 66.0827 33.141V21.859C66.0827 21.672 66.1568 21.4926 66.2886 21.3604C66.4205 21.2281 66.5993 21.1538 66.7857 21.1538ZM66.7857 42.3077H120.214C120.401 42.3077 120.58 42.382 120.711 42.5142C120.843 42.6465 120.917 42.8258 120.917 43.0128V54.2949C120.917 54.4819 120.843 54.6612 120.711 54.7935C120.58 54.9257 120.401 55 120.214 55H66.7857C66.5993 55 66.4205 54.9257 66.2886 54.7935C66.1568 54.6612 66.0827 54.4819 66.0827 54.2949V43.0128C66.0827 42.8258 66.1568 42.6465 66.2886 42.5142C66.4205 42.382 66.5993 42.3077 66.7857 42.3077Z"
-                      fill="#6D6E6E"/>
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M0.703008 21.1538H11.9511C12.1376 21.1538 12.3164 21.2281 12.4482 21.3603C12.5801 21.4926 12.6541 21.6719 12.6541 21.8589V54.2948C12.6541 54.4818 12.5801 54.6612 12.4482 54.7934C12.3164 54.9257 12.1376 55 11.9511 55H0.703008C0.516558 55 0.337746 54.9257 0.205906 54.7934C0.0740667 54.6612 0 54.4818 0 54.2948V21.8589C0 21.6719 0.0740667 21.4926 0.205906 21.3603C0.337746 21.2281 0.516558 21.1538 0.703008 21.1538ZM42.8835 21.1538H54.1316C54.318 21.1538 54.4968 21.2281 54.6287 21.3603C54.7605 21.4926 54.8346 21.6719 54.8346 21.8589V54.2948C54.8346 54.4818 54.7605 54.6612 54.6287 54.7934C54.4968 54.9257 54.318 55 54.1316 55H42.8835C42.697 55 42.5182 54.9257 42.3864 54.7934C42.2545 54.6612 42.1805 54.4818 42.1805 54.2948V21.8589C42.1805 21.6719 42.2545 21.4926 42.3864 21.3603C42.5182 21.2281 42.697 21.1538 42.8835 21.1538Z"
-                      fill="#A6CE39"/>
-              </svg>
+              <img alt="" src="{{ item.image }}" width="200">
             </div>
             <div class="box__inner box__inner--stretch">
               <div class="box__text">
