--- a/www.hlidacshopu.cz/src/html/priceterier/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/index.njk
@@ -4,7 +4,7 @@
 
 {% block preload %}
   <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.1/lit-html.js?module" crossorigin/>
-  <link rel="preload" as="fetch" href="http://localhost:3000/priceterier/sampleData1.html" crossorigin/>
+  <link rel="preload" as="fetch" href="sampleData1.html" crossorigin/>
 {% endblock %}
 
 {% block styles %}
@@ -96,9 +96,7 @@
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p class="explanation">
-              Poznámka: <em>Reálná sleva</em> se počítá jako aktuální cena po
-              slevě ku maximální ceně, za kterou se zboží prodávalo za posledních
-              90 dní.
+              Poznámka: <em>Reálná sleva</em> se počítá TODO.
             </p>
           </div>
         </div>
