--- a/arx.monks.cloud/src/stylesheets/hp.scss
+++ b/arx.monks.cloud/src/stylesheets/hp.scss
@@ -175,4 +175,57 @@
 /* Section: News */
 /**/
 
+.accordion {
+  &__title {
+    background-color: var(--mdc-theme--third);
+    color: var(--mdc-theme--primary);
+    position: relative;
+
+    h4 {
+      font-size: 1.5em;
+      font-weight: normal;
+      line-height: 1.3333;
+      padding: 29px 39px 29px 115px;
+      margin: 0;
+    }
+
+    h4::before {
+      content: "";
+      display: block;
+      width: 90px;
+      border-right: 1px solid var(--mdc-theme--primary);
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      background: #fff url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='32' height='32'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z' fill='%23502CCC'/%3E%3C/svg%3E") 50% 50% no-repeat;
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.07);
+    }
+  }
+  &__text {
+    background-color: #eeeff1;
+    padding: 23px 23px 23px 29px;
+
+    p {
+      margin: 0;
+      line-height: 1.77778;
+    }
+  }
+
+  &__item--collapsed {
+    h4::before {
+      background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='32' height='32'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z' fill='%23c4c4c4'/%3E%3C/svg%3E") 50% 50% no-repeat;
+      box-shadow: none;
+    }
+    &:hover h4::before {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='32' height='32'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z' fill='white'/%3E%3C/svg%3E");
+    }
+    .accordion__text {
+      max-height: 1px;
+      padding: 0;
+      overflow: hidden;
+    }
+  }
+}
+
 
