--- a/www.hlidacshopu.cz/src/html/priceterier/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/master.njk' %}
+{% extends 'priceterier/master.njk' %}
 {% from 'macros/helpers.njk' import sprite %}
 {% block title %}Priceterier prototyp{% endblock %}
 
@@ -62,7 +62,7 @@
       <div class="layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Priceterier Prototyp V1</h2>
+            <h2>Priceterier Prototyp V1 (pořadí % slevy)</h2>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <table class="shops-stats">
