--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -14,7 +14,7 @@
           <p><span>We are proud of our<br>20-year track record</span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
-            <a class="button__info" href="/investments/">MORE INFO</a>
+            <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
       <div class="jahudka">
         <h3>Meet our team</h3>
         <div class="button">
-          <a class="button__info" href="/team/">MORE INFO</a>
+          <a class="button__info" href="/team/">OUR TEAM</a>
         </div>
       </div>
     </div>
