[arx.monks.cloud] Improved typography rendering

--- a/arx.monks.cloud/src/stylesheets/_typography.scss
+++ b/arx.monks.cloud/src/stylesheets/_typography.scss
@@ -13,8 +13,6 @@
  */
 /*{"last_published":"2020-08-26 12:46:26 UTC"}*/
 
-@import url("https://p.typekit.net/p.css?s=1&k=sxe0okz&ht=tk&f=139.175.25136&a=3695725&app=typekit&e=css");
-
 @font-face {
   font-family: "proxima-nova";
   src: url("https://use.typekit.net/af/949f99/00000000000000003b9b3068/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/949f99/00000000000000003b9b3068/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/949f99/00000000000000003b9b3068/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
@@ -41,7 +39,15 @@
 
 body {
   font: 16px proxima-nova, sans-serif;
-  margin: 0;
+  font-kerning: normal;
+  font-variant-numeric: lining-nums slashed-zero;
+  font-variant-ligatures: common-ligatures contextual;
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "lnum", "zero";
+  font-feature-settings: "kern", "liga", "clig", "calt", "lnum", "zero";
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: geometricPrecision;
 }
 
 h1, h2, h3, h4 {
