--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <link rel="preconnect" href="https://use.typekit.net/">
+  <link rel="preconnect" href="https://res.cloudinary.com/">
   {% block meta %}{% endblock %}
   <link rel="stylesheet" href="/assets/css/main.css">
   {% block links %}{% endblock %}
