--- a/www.hlidacshopu.cz/src/html/priceterier/kcsleva/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/kcsleva/index.njk
@@ -61,7 +61,7 @@
       <div class="layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Priceterier Prototyp V1 (max slevy %)</h2>
+            <h2>Priceterier Prototyp V1 (max slevy Kč)</h2>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <table class="shops-stats">
@@ -80,7 +80,7 @@
                 <th scope="col">Eshop</th>
               </tr>
               </thead>
-              <tbody id="table-root-percent">
+              <tbody id="table-root-kc">
               <tr>
                 <td colspan="5">
                   <div class="loading-container">
