priceterier prototype 1 ref3 KcSlevy

--- a/www.hlidacshopu.cz/src/html/priceterier/kcsleva/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/kcsleva/index.njk
@@ -71,12 +71,12 @@
               <thead>
               <tr>
                 <th scope="col">Pořadí</th>
-                <th scope="col">Reálná sleva v %</th>
-                <th scope="col">Původní cena v Kč</th>
                 <th scope="col">Reálná sleva v Kč</th>
                 <th scope="col">Cena po slevě v Kč</th>
+                <th scope="col">Původní cena v Kč</th>
+                <th scope="col">Reálná sleva v %</th>
                 <th scope="col">Zlevněno od data</th>
-                <th scope="col">Produkt popis</th>
+                <th scope="col">Produkt</th>
                 <th scope="col">Eshop</th>
               </tr>
               </thead>
