--- a/www.hlidacshopu.cz/src/html/priceterier/index.njk
+++ b/www.hlidacshopu.cz/src/html/priceterier/index.njk
@@ -76,7 +76,7 @@
                 <th scope="col">Reálná sleva v Kč</th>
                 <th scope="col">Cena po slevě v Kč</th>
                 <th scope="col">Zlevněno od data</th>
-                <th scope="col">Produkt popis</th>
+                <th scope="col">Produkt</th>
                 <th scope="col">Eshop</th>
               </tr>
               </thead>
