--- a/zive.tv/src/stylesheets/main.scss
+++ b/zive.tv/src/stylesheets/main.scss
@@ -1,5 +1,6 @@
 @import "@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
+@import "common/typography";
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
