[shared[ Fixed incorrect font definition

--- a/shared/src/common/typography.scss
+++ b/shared/src/common/typography.scss
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font-family: 16px/1.5 Lato, lato, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font: 16px/1.5 Lato, lato, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   font-kerning: normal;
